argocd/platform/delivery/forgejo/prereqs/redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-http-redirect
  namespace: forgejo
spec:
  parentRefs:
    - name: forgejo
      sectionName: http
  hostnames:
    - git.lab.zerodi.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
